UnifyNetSDK/gen_ctypes_file/_1_original/HK_PlaySDK.h

//Frame Info
typedef struct{
    long nWidth;
    long nHeight;
    long nStamp;
    long nType;
    long nFrameRate;
    DWORD dwFrameNum;
}FRAME_INFO;
//Watermark Info
typedef struct{
    char *pDataBuf;
    long  nSize;
    long  nFrameNum;
    BOOL  bRsaRight;
    long  nReserved;
}WATERMARK_INFO;
typedef struct _VCA_TARGET_LIST_EX
{
    unsigned int    target_num;             //目标数量
    VCA_TARGET_EX   *pstTarget;             //目标内容，按照VCA_TARGET_EX的大小进行偏移读取各个目标具体的信息即可
}VCA_TARGET_LIST_EX;
//智能信息结构体回调用
typedef struct _INTEL_INFO_EX
{
    unsigned int                   type;               ///< 标记回调出了哪些私有信息类型
    VCA_TARGET_LIST_EX             stTarget;           ///< 目标
    VCA_TARGET_LIST_EX             stTarget_EX;        ///< 深眸目标
}INTEL_INFO_EX;
//目标框列表信息定义：
typedef struct _VCA_TARGET_LIST_V1_EX_
{
    unsigned int         LineType;      //框类型，0表示矩形框，1表示四角框
    unsigned int         target_num;    //目标数量
    HIK_TARGET_BLOB_EX   *pstTarget;    //目标内容，按照HIK_TARGET_BLOB_EX的大小进行偏移读取各个目标具体的信息即可
}VCA_TARGET_LIST_V1_EX;
//规则框列表信息定义：
typedef struct _VCA_RULE_LIST_V3_EX_
{
    unsigned int  LineType;      //框类型，0表示矩形框，1 表示四角框
    unsigned int  rule_num;     //链表中规则数量
    VCA_RULE_EX   *pstRule;   //规则内容，按照VCA_RULE_EX的大小进行偏移读取各个目标具体的信息即可
}VCA_RULE_LIST_V3_EX;
//报警信息定义：
typedef struct  _VCA_ALERT_LIST_EX_
{
    unsigned int           alert_num;  //报警数量
    VCA_ALERT_EX           *pstAlert; 
}VCA_ALERT_LIST_EX;
//智能信息结构体回调用
typedef struct _PRIVATE_INFO_
{
    unsigned int                  type;    ///< 标记回调出了哪些私有信息类型
    VCA_TARGET_LIST_V1_EX         stTarget;           ///< 普通目标框，类型 1
    VCA_TARGET_LIST_V1_EX         stTarget_EX;        ///< 深眸目标框，类型 2
    VCA_RULE_LIST_V3_EX           stRule;             ///< 普通规则框，类型 4
    VCA_RULE_LIST_V3_EX           stRule_EX;          ///< 深眸规则框，类型 8
    VCA_ALERT_LIST_EX             stAlert;            ///< 报警信息，类型 16
} PRIVATE_INFO;
typedef struct
{
    long nPort;
    char * pBuf;
    long nBufLen;
    long nWidth;
    long nHeight;
    long nStamp;
    long nType;
    void* nUser;
}DISPLAY_INFO;
//ENCRYPT Info
typedef struct{
    long nVideoEncryptType;  //视频加密类型
    long nAudioEncryptType;  //音频加密类型
    long nSetSecretKey;      //是否设置，1表示设置密钥，0表示没有设置密钥
}ENCRYPT_INFO;
// 加密码流回调,nType=0表示码流加密标记位发生变化就回调，nType=1表示码流有加密位发生回调-只回调一次
PLAYM4_API BOOL __stdcall PlayM4_SetEncryptTypeCallBack(LONG nPort, DWORD nType, void (CALLBACK* EncryptTypeCBFun)(long nPort, ENCRYPT_INFO* pEncryptInfo, void* nUser, long nReserved2), void* nUser);
//解码或显示回调中绝对时间戳（帧号）或相对时间戳（帧号）的回调设置;
// nModule 表示回调模块选择，0 表示默认解码回调和显示回调 1：表示解码回调，2：表示显示回调；
// nType 表示回调绝对时间戳（帧号）还是相对时间戳（帧号）的类型设置，0：表示回调相对时间戳和相对帧号 1: 表示回调绝对时间戳和绝对帧号
//显示回调是没有帧号回调的，所以显示回调下 0：表示回调相对时间戳 1: 表示回调绝对时间戳
PLAYM4_API BOOL __stdcall PlayM4_SetDecOrDisplayCallbackType(int nPort, int nModule, int nType);
///<显示
PLAYM4_API BOOL __stdcall PlayM4_SetDisplayRegion(LONG nPort,DWORD nRegionNum, RECT *pSrcRect, HWND hDestWnd, BOOL bEnable);///<电子放大
PLAYM4_API BOOL __stdcall PlayM4_SetDisplayRegionOnWnd(LONG nPort,DWORD nRegionNum, RECT *pSrcRect, BOOL bEnable);///<多窗口分割
PLAYM4_API BOOL __stdcall PlayM4_SetDisplayType(LONG nPort,LONG nType);
PLAYM4_API long __stdcall PlayM4_GetDisplayType(LONG nPort);
PLAYM4_API BOOL __stdcall PlayM4_SetDisplayCallBack(LONG nPort,void (CALLBACK* DisplayCBFun)(long nPort,char * pBuf,long nSize,long nWidth,long nHeight,long nStamp,long nType,void* nReserved));
PLAYM4_API BOOL __stdcall PlayM4_SetDisplayCallBackEx(LONG nPort,void (CALLBACK* DisplayCBFun)(DISPLAY_INFO *pstDisplayInfo), void* nUser);
PLAYM4_API BOOL __stdcall PlayM4_RegisterDrawFun(LONG nPort,void (CALLBACK* DrawFun)(long nPort,HDC hDc,void* nUser),void* nUser);
PLAYM4_API BOOL __stdcall PlayM4_SetEncTypeChangeCallBack(LONG nPort,void(CALLBACK *funEncChange)(long nPort,void* nUser),void* nUser);
PLAYM4_API BOOL __stdcall PlayM4_SetCheckWatermarkCallBack(LONG nPort,void(CALLBACK* funCheckWatermark)(long nPort,WATERMARK_INFO* pWatermarkInfo,void* nUser),void* nUser);
PLAYM4_API BOOL __stdcall PlayM4_RenderPrivateData(LONG nPort, int nIntelType, BOOL bTrue);
PLAYM4_API BOOL __stdcall PlayM4_RenderPrivateDataEx(LONG nPort, int nIntelType, int nSubType, BOOL bTrue);
PLAYM4_API BOOL __stdcall PlayM4_SetOverlayPriInfoFlag(LONG nPort, int nIntelType, BOOL bTrue);
PLAYM4_API BOOL __stdcall PlayM4_SetTrackDurationTime(LONG nPort, int nTime);
//私有信息回调接口，nType表示需要回调的私有信息类型，目前支持两种类型: 普通目标框：1; 深眸目标框； 2; 支持输入 1|2 的形式，即输入3表示两种类型都会回调
PLAYM4_API BOOL __stdcall PlayM4_RegisterIVSDrawFunCB_EX(long nPort, void (CALLBACK* IVSDrawFun)(long nPort, HDC hDC, FRAME_INFO* pFrameInfo, INTEL_INFO_EX* pSyncData, void*  dwUser), void*  dwUser, unsigned int nType);
//lType: 1 表示获取当前显示帧PTZ信息。以特定结构体形式存储在pInfo内，plLen返回长度信息;起先传入pInfo = null，可以获取出需要分配的内存长度plLen
PLAYM4_API BOOL __stdcall PlayM4_GetStreamAdditionalInfo(LONG nPort, LONG lType, BYTE* pInfo, LONG* plLen);
///<图像处理
PLAYM4_API BOOL __stdcall PlayM4_SetColor(LONG nPort, DWORD nRegionNum, int nBrightness, int nContrast, int nSaturation, int nHue);
PLAYM4_API BOOL __stdcall PlayM4_GetColor(LONG nPort, DWORD nRegionNum, int *pBrightness, int *pContrast, int *pSaturation, int *pHue);
PLAYM4_API BOOL __stdcall PlayM4_SetImageSharpen(LONG nPort,DWORD nLevel);
PLAYM4_API BOOL __stdcall PlayM4_SetRotateAngle(LONG nPort, DWORD nRegionNum, DWORD dwType);
///<其他
PLAYM4_API DWORD __stdcall PlayM4_GetFileHeadLength();
PLAYM4_API DWORD __stdcall PlayM4_GetSdkVersion();
PLAYM4_API DWORD __stdcall PlayM4_GetLastError(LONG nPort);
PLAYM4_API BOOL __stdcall PlayM4_SetSycGroup(LONG nPort, DWORD dwGroupIndex);
PLAYM4_API BOOL __stdcall PlayM4_MotionFlow(LONG nPort, DWORD dwAdjustType);
//私有信息回调接口,nStamp表示相对时间戳信息；pSyncData表示私有信息内容, nType表示需要回调的私有信息类型，支持多个私有信息类型一起设置，
//比如当nType等于6表示外部需要回调深眸目标框和普通规则框，此时播放库只会回调这两种类型，如果都需要回调则直接设置nType等于0即可，此时默认智能信息结构体里的信息都会回调；
//nMode表示回调注册的模式(用于接口的功能扩展)，0表示解码后立刻回调，播放库内部不进行和视频帧的匹配，也不会回调HDC，目前只支持0模式，后续根据需求可以增加匹配后回调模式和匹配后回调HDC模式
PLAYM4_API BOOL __stdcall PlayM4_RegisterIVSIntelInfoCB(LONG nPort, void (CALLBACK* IVSIntelInfoCBFun)(LONG nPort, HDC hDC, LONG nStamp, PRIVATE_INFO* pSyncData, void*  dwUser), void* dwUser, DWORD nType, DWORD nMode);