UnifyNetSDK/haikang/hk_playsdk_wrapper.py


# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 517
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetEncryptTypeCallBack", "cdecl"):
    PlayM4_SetEncryptTypeCallBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetEncryptTypeCallBack", "cdecl")
    PlayM4_SetEncryptTypeCallBack.argtypes = [LONG, DWORD, CFUNCTYPE(UNCHECKED(None), c_long, POINTER(ENCRYPT_INFO), POINTER(None), c_long), POINTER(None)]
    PlayM4_SetEncryptTypeCallBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 518
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDecOrDisplayCallbackType", "cdecl"):
    PlayM4_SetDecOrDisplayCallbackType = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDecOrDisplayCallbackType", "cdecl")
    PlayM4_SetDecOrDisplayCallbackType.argtypes = [c_int, c_int, c_int]
    PlayM4_SetDecOrDisplayCallbackType.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 519
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDisplayRegion", "cdecl"):
    PlayM4_SetDisplayRegion = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDisplayRegion", "cdecl")
    PlayM4_SetDisplayRegion.argtypes = [LONG, DWORD, POINTER(RECT), HWND, BOOL]
    PlayM4_SetDisplayRegion.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 520
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDisplayRegionOnWnd", "cdecl"):
    PlayM4_SetDisplayRegionOnWnd = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDisplayRegionOnWnd", "cdecl")
    PlayM4_SetDisplayRegionOnWnd.argtypes = [LONG, DWORD, POINTER(RECT), BOOL]
    PlayM4_SetDisplayRegionOnWnd.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 521
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDisplayType", "cdecl"):
    PlayM4_SetDisplayType = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDisplayType", "cdecl")
    PlayM4_SetDisplayType.argtypes = [LONG, LONG]
    PlayM4_SetDisplayType.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 522
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetDisplayType", "cdecl"):
    PlayM4_GetDisplayType = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetDisplayType", "cdecl")
    PlayM4_GetDisplayType.argtypes = [LONG]
    PlayM4_GetDisplayType.restype = c_long

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 523
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDisplayCallBack", "cdecl"):
    PlayM4_SetDisplayCallBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDisplayCallBack", "cdecl")
    PlayM4_SetDisplayCallBack.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), c_long, String, c_long, c_long, c_long, c_long, c_long, POINTER(None))]
    PlayM4_SetDisplayCallBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 524
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDisplayCallBackEx", "cdecl"):
    PlayM4_SetDisplayCallBackEx = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDisplayCallBackEx", "cdecl")
    PlayM4_SetDisplayCallBackEx.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), POINTER(DISPLAY_INFO)), POINTER(None)]
    PlayM4_SetDisplayCallBackEx.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 525
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_RegisterDrawFun", "cdecl"):
    PlayM4_RegisterDrawFun = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_RegisterDrawFun", "cdecl")
    PlayM4_RegisterDrawFun.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), c_long, HDC, POINTER(None)), POINTER(None)]
    PlayM4_RegisterDrawFun.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 526
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetEncTypeChangeCallBack", "cdecl"):
    PlayM4_SetEncTypeChangeCallBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetEncTypeChangeCallBack", "cdecl")
    PlayM4_SetEncTypeChangeCallBack.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), c_long, POINTER(None)), POINTER(None)]
    PlayM4_SetEncTypeChangeCallBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 527
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetCheckWatermarkCallBack", "cdecl"):
    PlayM4_SetCheckWatermarkCallBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetCheckWatermarkCallBack", "cdecl")
    PlayM4_SetCheckWatermarkCallBack.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), c_long, POINTER(WATERMARK_INFO), POINTER(None)), POINTER(None)]
    PlayM4_SetCheckWatermarkCallBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 528
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_RenderPrivateData", "cdecl"):
    PlayM4_RenderPrivateData = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_RenderPrivateData", "cdecl")
    PlayM4_RenderPrivateData.argtypes = [LONG, c_int, BOOL]
    PlayM4_RenderPrivateData.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 529
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_RenderPrivateDataEx", "cdecl"):
    PlayM4_RenderPrivateDataEx = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_RenderPrivateDataEx", "cdecl")
    PlayM4_RenderPrivateDataEx.argtypes = [LONG, c_int, c_int, BOOL]
    PlayM4_RenderPrivateDataEx.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 530
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetOverlayPriInfoFlag", "cdecl"):
    PlayM4_SetOverlayPriInfoFlag = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetOverlayPriInfoFlag", "cdecl")
    PlayM4_SetOverlayPriInfoFlag.argtypes = [LONG, c_int, BOOL]
    PlayM4_SetOverlayPriInfoFlag.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 531
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetTrackDurationTime", "cdecl"):
    PlayM4_SetTrackDurationTime = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetTrackDurationTime", "cdecl")
    PlayM4_SetTrackDurationTime.argtypes = [LONG, c_int]
    PlayM4_SetTrackDurationTime.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 532
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_RegisterIVSDrawFunCB_EX", "cdecl"):
    PlayM4_RegisterIVSDrawFunCB_EX = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_RegisterIVSDrawFunCB_EX", "cdecl")
    PlayM4_RegisterIVSDrawFunCB_EX.argtypes = [c_long, CFUNCTYPE(UNCHECKED(None), c_long, HDC, POINTER(FRAME_INFO), POINTER(INTEL_INFO_EX), POINTER(None)), POINTER(None), c_uint]
    PlayM4_RegisterIVSDrawFunCB_EX.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 533
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetStreamAdditionalInfo", "cdecl"):
    PlayM4_GetStreamAdditionalInfo = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetStreamAdditionalInfo", "cdecl")
    PlayM4_GetStreamAdditionalInfo.argtypes = [LONG, LONG, POINTER(BYTE), POINTER(LONG)]
    PlayM4_GetStreamAdditionalInfo.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 534
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetColor", "cdecl"):
    PlayM4_SetColor = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetColor", "cdecl")
    PlayM4_SetColor.argtypes = [LONG, DWORD, c_int, c_int, c_int, c_int]
    PlayM4_SetColor.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 535
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetColor", "cdecl"):
    PlayM4_GetColor = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetColor", "cdecl")
    PlayM4_GetColor.argtypes = [LONG, DWORD, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]
    PlayM4_GetColor.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 536
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetImageSharpen", "cdecl"):
    PlayM4_SetImageSharpen = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetImageSharpen", "cdecl")
    PlayM4_SetImageSharpen.argtypes = [LONG, DWORD]
    PlayM4_SetImageSharpen.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 537
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetRotateAngle", "cdecl"):
    PlayM4_SetRotateAngle = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetRotateAngle", "cdecl")
    PlayM4_SetRotateAngle.argtypes = [LONG, DWORD, DWORD]
    PlayM4_SetRotateAngle.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 538
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetFileHeadLength", "cdecl"):
    PlayM4_GetFileHeadLength = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetFileHeadLength", "cdecl")
    PlayM4_GetFileHeadLength.argtypes = []
    PlayM4_GetFileHeadLength.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 539
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetSdkVersion", "cdecl"):
    PlayM4_GetSdkVersion = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetSdkVersion", "cdecl")
    PlayM4_GetSdkVersion.argtypes = []
    PlayM4_GetSdkVersion.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 540
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetLastError", "cdecl"):
    PlayM4_GetLastError = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetLastError", "cdecl")
    PlayM4_GetLastError.argtypes = [LONG]
    PlayM4_GetLastError.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 541
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetSycGroup", "cdecl"):
    PlayM4_SetSycGroup = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetSycGroup", "cdecl")
    PlayM4_SetSycGroup.argtypes = [LONG, DWORD]
    PlayM4_SetSycGroup.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 542
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_MotionFlow", "cdecl"):
    PlayM4_MotionFlow = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_MotionFlow", "cdecl")
    PlayM4_MotionFlow.argtypes = [LONG, DWORD]
    PlayM4_MotionFlow.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 543
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_RegisterIVSIntelInfoCB", "cdecl"):
    PlayM4_RegisterIVSIntelInfoCB = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_RegisterIVSIntelInfoCB", "cdecl")
    PlayM4_RegisterIVSIntelInfoCB.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), LONG, HDC, LONG, POINTER(PRIVATE_INFO), POINTER(None)), POINTER(None), DWORD, DWORD]
    PlayM4_RegisterIVSIntelInfoCB.restype = BOOL
